--- a/QLCuaHangBanXeMayDien/QLCuaHangBanXeMayDien.csproj
+++ b/QLCuaHangBanXeMayDien/QLCuaHangBanXeMayDien.csproj
@@ -46,6 +46,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="frmCreateAccount.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmCreateAccount.Designer.cs">
+      <DependentUpon>frmCreateAccount.cs</DependentUpon>
+    </Compile>
     <Compile Include="frmBanHang.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -132,6 +138,7 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="QuanLy_BUS\AccountBUS.cs" />
     <Compile Include="QuanLy_BUS\KhachHangBUS.cs" />
     <Compile Include="QuanLy_BUS\MatHangBUS.cs" />
     <Compile Include="QuanLy_BUS\NhaCungCapBUS.cs" />
@@ -146,6 +153,9 @@
     <Compile Include="QuanLy_DTO\NhanVien.cs" />
     <Compile Include="QuanLy_DTO\PhieuNhap.cs" />
     <Compile Include="QuanLy_DTO\PhieuXuat.cs" />
+    <EmbeddedResource Include="frmCreateAccount.resx">
+      <DependentUpon>frmCreateAccount.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="frmBanHang.resx">
       <DependentUpon>frmBanHang.cs</DependentUpon>
     </EmbeddedResource>
@@ -214,6 +224,9 @@
   <ItemGroup />
   <ItemGroup>
     <Content Include="DATABASE\DataDaiLyBanXe.sql" />
+    <None Include="Resources\icons8-cancel-30.png" />
+    <None Include="Resources\icons8-cancel-32.png" />
+    <None Include="Resources\icons8-verified-account-32.png" />
     <None Include="Resources\icons8-user-shield-32.png" />
     <None Include="Resources\icons8-search-26.png" />
     <None Include="Resources\icons8-search-32.png" />
